<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@drawable/dialog_background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_weight="1"
        android:padding="@dimen/dp_25">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_map_popup_icon"
            android:layout_gravity="center"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/share_location"
            android:layout_marginTop="@dimen/dp_25"
            android:layout_gravity="center"
            android:textColor="@android:color/black"
            android:textSize="@dimen/sp_30"/>
        <TextView
            android:id="@+id/tv_share_status"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_20"
            android:text="@string/confirm_share_location_text"
            android:textColor="@android:color/black"
            android:padding="@dimen/dp_15"
            android:gravity="center"
            android:textSize="@dimen/sp_18"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="bottom">
        <Button
            android:id="@+id/b_no"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/btn_no"
            android:textColor="@android:color/black"
            android:textSize="@dimen/sp_20"
            android:gravity="center"
            android:padding="@dimen/dp_17"
            android:background="@color/light_grey"
            android:layout_weight="1"/>
        <Button
            android:id="@+id/b_yes"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/btn_yes"
            android:textSize="@dimen/sp_20"
            android:gravity="center"
            android:textColor="@android:color/white"
            android:padding="@dimen/dp_17"
            android:background="@color/app_color"
            android:layout_weight="1"/>
    </LinearLayout>
</LinearLayout>