<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:paddingLeft="@dimen/dp_20"
    android:paddingRight="@dimen/dp_20"
    android:paddingTop="@dimen/dp_20"
    android:paddingBottom="@dimen/dp_10"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:orientation="vertical"
            android:id="@+id/ll_sign_up"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tv_verify_title"
                android:layout_gravity="center_horizontal"
                android:text="@string/verify_number_title"
                android:textSize="@dimen/sp_30"
                android:textColor="@android:color/black"
                android:padding="@dimen/dp_10"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tv_verification_instruction"
                android:paddingTop="@dimen/dp_10"
                android:text="@string/instruction"
                android:textSize="@dimen/sp_18"
                android:layout_marginTop="@dimen/dp_10"
                android:gravity="center_horizontal"
                android:textColor="@android:color/black"
                android:layout_marginBottom="@dimen/dp_20"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_0.5"
                android:layout_marginTop="@dimen/dp_20"
                android:background="@android:color/black"/>

            <FrameLayout
                android:layout_width="match_parent"
                android:paddingTop="@dimen/dp_10"
                android:paddingBottom="@dimen/dp_10"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/country"
                    android:layout_gravity="center_vertical"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/sp_16" />

                <Spinner
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/sp_country"
                    android:gravity="center"
                    android:layout_gravity="end|center_vertical"/>
            </FrameLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_0.5"
                android:background="@android:color/black"/>
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/dp_14"
                android:paddingBottom="@dimen/dp_14">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/phone_no"
                    android:textSize="@dimen/sp_16"
                    android:layout_gravity="center_vertical"
                    android:textColor="@android:color/black"/>

                <EditText
                    android:layout_width="@dimen/dp_100"
                    android:layout_height="match_parent"
                    android:id="@+id/et_number"
                    android:inputType="phone|number"
                    android:maxLength="10"
                    android:digits="@string/number_digits"
                    android:imeOptions="actionDone"
                    android:background="@null"
                    android:gravity="center"
                    android:textSize="@dimen/sp_16"
                    android:layout_gravity="center_vertical|end"
                    android:hint="@string/phone_no_hint"/>
            </FrameLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_0.5"
                android:layout_marginBottom="@dimen/dp_10"
                android:background="@android:color/black" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_marginTop="@dimen/dp_20"
                android:padding="@dimen/dp_5"
                android:layout_height="wrap_content">
                <ProgressBar
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/pb_loader"
                    android:layout_gravity="center"
                    android:visibility="gone"/>

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/b_verify"
                    android:paddingTop="@dimen/dp_10"
                    android:paddingBottom="@dimen/dp_10"
                    android:text="@string/verify_btn_text"
                    android:textSize="@dimen/sp_16"
                    style="@style/app_margin_style"/>
            </FrameLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tv_privacy_policy"
                android:text="@string/terms_privacy_policy"
                android:layout_marginTop="@dimen/dp_20"
                android:textSize="@dimen/sp_16"/>




        </LinearLayout>


        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_0.5"
            android:layout_marginTop="@dimen/dp_20"
            android:layout_above="@+id/b_facebook_login"
            android:background="@android:color/black" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/b_facebook_login"
            android:paddingTop="@dimen/dp_10"
            android:visibility="visible"
            android:layout_alignParentBottom="true"
            android:layout_marginTop="@dimen/dp_10"
            android:paddingBottom="@dimen/dp_10"
            android:background="@drawable/fb_btn">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_facebook"
                android:textColor="@android:color/white"
                android:textAllCaps="false"
                android:layout_gravity="center"
                android:gravity="center"
                android:textSize="@dimen/sp_16"
                android:drawableStart="@drawable/facebook"
                android:drawablePadding="@dimen/dp_10"/>
        </FrameLayout>
    </RelativeLayout>
</android.support.v4.widget.NestedScrollView>